...
        ],
        bottom: TabBar(
          controller: _tabController,
          tabs: const [
            Tab(
              icon: Icon(Icons.history),
              text: 'History',
            ),
            Tab(
              icon: Icon(Icons.api),
              text: 'API Definitions',
            ),
          ],
        ),
      ),
      body: TabBarView(
        controller: _tabController,
...
